feat: add audits to lc daa actions